deployment/K8S/message-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messages-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messageservice
  template:
    metadata:
      labels:
        app: messageservice
    spec:
      containers:
        - name: messageservice
          image: dd3n9/messageservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: messages-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: messageservice
  ports:
    - name: messageservice
      protocol: TCP
      port: 8080
      targetPort: 8080
