deployment/K8S/mssql-mssg-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-mssg-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-mssg
  template:
    metadata:
      labels:
        app: mssql-mssg
    spec:
      containers:
        - name: mssql-mssg
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssql-mssgdb
      volumes:
        - name: mssql-mssgdb
          persistentVolumeClaim:
            claimName: mssql-mssg-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-mssg-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql-mssg
  ports:
    - name: mssql-mssg
      protocol: TCP
      port: 1433
      targetPort: 1433
