deployment/K8S/mssql-ntf-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-ntf-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-ntf
  template:
    metadata:
      labels:
        app: mssql-ntf
    spec:
      containers:
        - name: mssql-ntf
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssql-ntfdb
      volumes:
        - name: mssql-ntfdb
          persistentVolumeClaim:
            claimName: mssql-ntf-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-ntf-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql-ntf
  ports:
    - name: mssql-ntf
      protocol: TCP
      port: 1433
      targetPort: 1433
