deployment/K8S/mssql-schdlr-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-schdlr-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-schdlr
  template:
    metadata:
      labels:
        app: mssql-schdlr
    spec:
      containers:
        - name: mssql-schdlr
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssql-schdlrdb
      volumes:
        - name: mssql-schdlrdb
          persistentVolumeClaim:
            claimName: mssql-schdlr-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-schdlr-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql-schdlr
  ports:
    - name: mssql-schdlr
      protocol: TCP
      port: 1433
      targetPort: 1433
