deployment/K8S/mssql-user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-user
  template:
    metadata:
      labels:
        app: mssql-user
    spec:
      containers:
        - name: mssql-user
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssql-userdb
      volumes:
        - name: mssql-userdb
          persistentVolumeClaim:
            claimName: mssql-user-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-user-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql-user
  ports:
    - name: mssql-user
      protocol: TCP
      port: 1433
      targetPort: 1433
