deployment/K8S/mssql-yarp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-yarp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-yarp
  template:
    metadata:
      labels:
        app: mssql-yarp
    spec:
      containers:
        - name: mssql-yarp
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssql-yarpdb
      volumes:
        - name: mssql-yarpdb
          persistentVolumeClaim:
            claimName: mssql-yarp-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-yarp-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql-yarp
  ports:
    - name: mssql-yarp
      protocol: TCP
      port: 1433
      targetPort: 1433
