deployment/K8S/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      containers:
        - name: notificationservice
          image: dd3n9/notificationservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: notificationservice
  ports:
    - name: notificationservice
      protocol: TCP
      port: 8080
      targetPort: 8080
