deployment/K8S/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: dd3n9/userservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: users-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
    - name: userservice
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: usergrpc
      protocol: TCP
      port: 666
      targetPort: 666
