deployment/K8S/yarp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yarp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yarpgateway
  template:
    metadata:
      labels:
        app: yarpgateway
    spec:
      containers:
        - name: yarpgateway
          image: dd3n9/yarpgateway:latest
---
apiVersion: v1
kind: Service
metadata:
  name: yarp-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: yarpgateway
  ports:
    - name: yarpgateway
      protocol: TCP
      port: 8080
      targetPort: 8080
